--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -53,7 +53,7 @@
 // desktop display
 @media screen and (min-width: 1200px) {
     .gallery {
-        height: 90vh;
+        min-height: 90vh;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 3fr 3fr;
