--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .gallery {
-    height: 90vh;
+    min-height: 90vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 3fr 3fr;
@@ -331,4 +331,10 @@ body {
   .history__interests {
     width: 100%;
   }
+}
+.contact .callout {
+  width: 100%;
+  font-family: "Cormorant", serif;
+  font-weight: 400;
+  font-size: 80px;
 }/*# sourceMappingURL=style.css.map */
